--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
     <center><h3 id="text" class="description">Node.JS Разработчик.</h3></center>
 
     <center><nav>
-        <a href="" id="discord">Discord</a>
-        <a href="" id="github">Github</a>
-        <a href="" id="youtube">Youtube</a>
-        <a href="" id="vk">ВКонтакте</a>
-        <a href="" id="spotify">Spotify</a>
+        <a href="https://discord.gg/v2wS27uMEZ" id="discord">Discord</a>
+        <a href="https://github.com/Qwedi" id="github">Github</a>
+        <a href="https://www.youtube.com/channel/UCBqtX8Yq46t19KzdOEv5OWg" id="youtube">Youtube</a>
+        <a href="https://vk.com/q_w_e_d_i" id="vk">ВКонтакте</a>
+        <a href="https://open.spotify.com/user/cc2kogwrxd8nb1nf4qtczi04b" id="spotify">Spotify</a>
     </nav></center>
 
     <div class="socialM">
-        <center><a href="" id="discordM">Discord</a></center>
+        <center><a href="https://discord.gg/v2wS27uMEZ" id="discordM">Discord</a></center>
         <br><br>
-        <center><a href="" id="githubM">Github</a></center>
+        <center><a href="https://github.com/Qwedi" id="githubM">Github</a></center>
         <br><br>
-        <center><a href="" id="youtubeM">Youtube</a></center>
+        <center><a href="https://www.youtube.com/channel/UCBqtX8Yq46t19KzdOEv5OWg" id="youtubeM">Youtube</a></center>
         <br><br>
-        <center><a href="" id="vkM">ВКонтакте</a></center>
+        <center><a href="https://vk.com/q_w_e_d_i" id="vkM">ВКонтакте</a></center>
         <br><br>
-        <center><a href="" id="spotifyM">Spotify</a></center>
+        <center><a href="https://open.spotify.com/user/cc2kogwrxd8nb1nf4qtczi04b" id="spotifyM">Spotify</a></center>
     </div>
 </body>
 </html>
