--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" rel="stylesheet">
-    <link href="../css/styles.css" rel="stylesheet" type="text/css">
-    <link href="../css/ids.css" rel="stylesheet" type="text/css">
-    <link href="../css/class.css" rel="stylesheet" type="text/css">
-    <link href="../css/mobile.css" rel="stylesheet" type="text/css">
+    <link href="./css/styles.css" rel="stylesheet" type="text/css">
+    <link href="./css/ids.css" rel="stylesheet" type="text/css">
+    <link href="./css/class.css" rel="stylesheet" type="text/css">
+    <link href="./css/mobile.css" rel="stylesheet" type="text/css">
     <title>SonBot: Discord бот</title>
 </head>
 <body>
@@ -20,9 +20,9 @@
             <a href="#" id="btn" class="indent"><i class="fa-solid fa-house"></i> Главная</a>
             <a href="#capabilities" id="btn" class="indent"><i class="fa-solid fa-circle-info"></i> Возможности</a>
             <a href="#stats" id="btn" class="indent"><i class="fa-solid fa-chart-column"></i> Статистика</a>
-            <a href="./pages/404.html" id="btn" class="indent"><i class="fa-solid fa-book"></i> Документация</a>
+            <a href="./html/404.html" id="btn" class="indent"><i class="fa-solid fa-book"></i> Документация</a>
             <a href="./pages/404.html" id="login" class="indent"><i class="fa-solid fa-right-to-bracket"></i> Войти</a>
-            <a href="#" id="github" class="indent"><i class="fa-brands fa-github"></i></a>
+            <a href="https://discord.gg/v2wS27uMEZ" id="github" class="indent"><i class="fa-brands fa-github"></i></a>
             <a href="#" id="discord" class="indent"><i class="fa-brands fa-discord"></i></a>
         </div>
     </td>
@@ -34,8 +34,8 @@
     <p class="description">Наше приложение — это бот с большим функционалом <br> 
         который совмещает в себе категории такие как: <br> Информация, Утилиты, Развлечения, Ролевые команды.
     </p>
-    <a href="#" id="invite" class="indent">Пригласить бота</a>
-    <a href="./pages/404.html" id="premium" class="indent"><i class="fa-solid fa-star"></i> Прайм статус</a>
+    <a href="https://discord.com/oauth2/authorize?client_id=944273641946886235&scope=bot+applications.commands&permissions=8" id="invite" class="indent">Пригласить бота</a>
+    <a href="./html/404.html" id="premium" class="indent"><i class="fa-solid fa-star"></i> Прайм статус</a>
     </div>
 
     <div class="#capabilities" id="capabilities">
