--- a/pages/404.html
+++ b/pages/404.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" rel="stylesheet">
-    <link href="../../css/404.css" rel="stylesheet" type="text/css">
+    <link href="../css/404.css" rel="stylesheet" type="text/css">
     <title>SonBot: 404</title>
 </head>
 <body>
