--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
         <h1><span class="red"><i class="fa-sharp fa-solid fa-triangle-exclamation"></i></span> Ошибка: 404</h1>
         <p>Упс... Похоже данная страница спит <br> Или временно недоступна. <i class="fa-solid fa-moon"></i></p>
         <br>
-        <a href="../index.html"><i class="fa-sharp fa-solid fa-circle-left"></i> Вернуться</a>
+        <a href="https://sonbot.xyz/"><i class="fa-sharp fa-solid fa-circle-left"></i> Вернуться</a>
     </div>
 </body>
 </html>
