--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <a href="https://sonbot.xyz/" id="btn" class="indent"><i class="fa-solid fa-house"></i> Главная</a>
             <a href="#capabilities" id="btn" class="indent"><i class="fa-solid fa-circle-info"></i> Возможности</a>
             <a href="#stats" id="btn" class="indent"><i class="fa-solid fa-chart-column"></i> Статистика</a>
-            <a href="https://sonbot.xyz/pages/404" id="btn" class="indent"><i class="fa-solid fa-book"></i> Документация</a>
-            <a href="https://sonbot.xyz/pages/404" id="login" class="indent"><i class="fa-solid fa-right-to-bracket"></i> Войти</a>
-            <a href="https://discord.gg/v2wS27uMEZ" id="github" class="indent"><i class="fa-brands fa-github"></i></a>
-            <a href="#" id="discord" class="indent"><i class="fa-brands fa-discord"></i></a>
+            <a href="https://sonbot.xyz/404" id="btn" class="indent"><i class="fa-solid fa-book"></i> Документация</a>
+            <a href="https://sonbot.xyz/404" id="login" class="indent"><i class="fa-solid fa-right-to-bracket"></i> Войти</a>
+            <a href="https://github.com/Qwedi" id="github" class="indent"><i class="fa-brands fa-github"></i></a>
+            <a href="https://discord.gg/v2wS27uMEZ" id="discord" class="indent"><i class="fa-brands fa-discord"></i></a>
         </div>
     </td>
     </tr>
@@ -35,7 +35,7 @@
         который совмещает в себе категории такие как: <br> Информация, Утилиты, Развлечения, Ролевые команды.
     </p>
     <a href="https://discord.com/oauth2/authorize?client_id=944273641946886235&scope=bot+applications.commands&permissions=8" id="invite" class="indent">Пригласить бота</a>
-    <a href="https://sonbot.xyz/pages/404" id="premium" class="indent"><i class="fa-solid fa-star"></i> Прайм статус</a>
+    <a href="https://sonbot.xyz/404" id="premium" class="indent"><i class="fa-solid fa-star"></i> Прайм статус</a>
     </div>
 
     <div class="#capabilities" id="capabilities">
