--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link href="./css/class.css" rel="stylesheet" type="text/css">
     <link href="./css/mobile.css" rel="stylesheet" type="text/css">
     <title>SonBot: Discord бот</title>
+    <meta content="Embed Title" property="og:title" />
+    <meta content="Site Description" property="og:description" />
+    <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
+    <meta content="https://embed.com/embedimage.png" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
     <table width="100%" height="80" style="position: top" bgcolor="#191a1d">
