--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
     <meta content="https://embed.com/embedimage.png" property="og:image" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
     <table width="100%" height="80" style="position: top" bgcolor="#191a1d">
