--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link href="./css/class.css" rel="stylesheet" type="text/css">
     <link href="./css/mobile.css" rel="stylesheet" type="text/css">
     <title>SonBot: Discord бот</title>
-    <meta content="Embed Title" property="og:title" />
-    <meta content="Site Description" property="og:description" />
-    <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
-    <meta content="https://embed.com/embedimage.png" property="og:image" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta content="SonBot: Дискорд бот" property="og:title" />
+    <meta content="Наше приложение — это бот с большим функционалом который совмещает в себе категории такие как: Информация, Утилиты, Развлечения, Ролевые команды." property="og:description" />
+    <meta content="https://images-ext-1.discordapp.net/external/RLaMnsCb-wAs-XH2WgEpMCxRv81RE4hHtEAzWKVU0As/%3Fsize%3D2048/https/cdn.discordapp.com/avatars/944273641946886235/52f001447bbd4279bd5ff880ec3e02ce.webp?width=352&height=352" property="og:url" />
+    <meta content="https://images-ext-1.discordapp.net/external/RLaMnsCb-wAs-XH2WgEpMCxRv81RE4hHtEAzWKVU0As/%3Fsize%3D2048/https/cdn.discordapp.com/avatars/944273641946886235/52f001447bbd4279bd5ff880ec3e02ce.webp?width=352&height=352" property="og:image" />
+    <meta content="#6a87ec" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
