--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>SonBot: Discord бот</title>
     <meta content="SonBot: Дискорд бот" property="og:title" />
     <meta content="Наше приложение — это бот с большим функционалом который совмещает в себе категории такие как: Информация, Утилиты, Развлечения, Ролевые команды." property="og:description" />
-    <meta content="https://cdn.discordapp.com/avatars/944273641946886235/52f001447bbd4279bd5ff880ec3e02ce.webp?size=2048" property="og:url" />
+    <meta content="https://cdn.discordapp.com/avatars/944273641946886235/52f001447bbd4279bd5ff880ec3e02ce.webp?size=2048" property="og:thumbnail" />
     <meta content="#6a87ec" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary_large_image">
 </head>
